--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,22 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,600&display=swap');
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
+  font-family: "Quicksand"
+}
+
+#root {
+  height: 120vh;
+  background: #22c1c3;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #fdbb2d, #22c1c3);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #fdbb2d, #22c1c3);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .App-logo {
@@ -33,32 +50,138 @@
 }
 
 #dash {
-  display: flex;
-  flex-direction: column; 
-  flex-wrap: wrap;
-  margin: auto;
-  width: 60vw;
-  height: 50vh;
+  display: grid;
+  grid-template-columns: 3fr 2fr 3fr;
+  grid-template-rows: 50px 100px 100px;
+  grid-template-areas: "topNav topNav topNav" "main main main " "main2 main2 main2";
+  grid-column-gap: 20px;
+  /* overflow: hidden; */
 }
 
+#topNav {
+  grid-area: topNav;
+  grid-column: 1/3;
+  grid-row: 1;
+  background-color: #61dafb97;
+  /* overflow: hidden; */
+}
 
-#box1 {
-  height:20vh;
+#navItems {
+  list-style: none;
+  float: left;
+}
+
+#navItems li {
+  display: inline-block;
+}
+
+#h {
   background-color: red;
 }
-#box2 {
-  height: 20vh;
-  background-color: blue; 
+
+#w {
+  background-color: blue;
 }
-#box3 {
-  height: 20vh;
+
+#l {
   background-color: green;
 }
-#box4 {
-  height: 20vh;
+
+#a {
   background-color: orange;
 }
-#box5 {
-  height: 20vh;
+
+#p {
   background-color: yellow;
 }
+
+#c {
+  background-color: pink
+}
+
+/* ------------------------------------------- */
+
+/* MOBILE / RESPONSIVE */
+
+/* ------------------------------------------- */
+
+@media screen and (max-width: 1000px) {
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  #dash {
+    margin: 5%;
+    border: 3px solid black;
+    padding: 5%;
+    display: grid;
+    grid-template-columns: calc(50% - 15px) 50%;
+    grid-template-rows: 50px 30vh 20vh 30vh;
+    grid-template-areas: "topNav topNav" "main main" "main2 main2" "main3 main3";
+    grid-gap: 10px 15px;
+  }
+  #topNav {
+    /* display: flex; */
+    grid-area: topNav;
+    grid-column: 1/3;
+    grid-row: 1/1;
+    background-color: #61dafb97;
+    /* justify-content: space-around; */
+    /* align-content: center; */
+  }
+  #navItems {
+    width: 100%;
+    list-style: none;
+  }
+  #navItems li {
+    /* display: inline-block; */
+    margin-right: 40px;
+    margin-top: 30px;
+  }
+  #h {
+    background-color: red;
+    grid-area: main1;
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  #w {
+    background-color: blue;
+    grid-area: main1;
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+  #l {
+    background-color: green;
+    grid-area: main2;
+    grid-column: 2/3;
+    grid-row: 3/4;
+  }
+  #a {
+    background-color: yellow;
+    grid-area: main2;
+    grid-column: 1/2;
+    grid-row: 3/4
+  }
+  #p {
+    background-color: pink;
+    grid-area: main3;
+    grid-column: 1/2;
+    grid-row: 4/5
+  }
+  #c {
+    background-color: orange;
+    grid-area: main3;
+    grid-column: 2/3;
+    grid-row: 4/5
+  }
+}
+
+/* #dash {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        margin: auto;
+        width: 60vw;
+        height: 50vh;
+      } */
