--- a/src/App.css
+++ b/src/App.css
@@ -184,7 +184,11 @@
     display: grid;
     grid-template-columns: calc(50% - 15px) 50%;
     grid-template-rows: 50px 30vh 20vh 30vh;
-    grid-template-areas: "topNav topNav" "main main" "main2 main2" "main3 main3";
+    grid-template-areas: 
+            "topNav          topNav" 
+            "air-content   water-content" 
+            "light-content  alert-content" 
+            "   p        control-content";
     grid-gap: 10px 15px;
   }
   #topNav {
@@ -205,11 +209,11 @@
   /* ------------------------------------------- */
   /* CONTENT BOXES */
   /* ------------------------------------------- */
-  #humidity-content {
+  #air-content {
     background: #cb2d3e;
     background: linear-gradient(to bottom, #cb2d3e, #ef473a);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    grid-area: main1;
+    grid-area: 'air-content';
     grid-column: 1/2;
     grid-row: 2/3;
     border-radius: 10px;
@@ -225,7 +229,7 @@
     /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to bottom, #021B79, #0575E6);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    grid-area: main1;
+    grid-area: 'water-content';
     grid-column: 2/3;
     grid-row: 2/3;
     border-radius: 10px;
@@ -239,7 +243,7 @@
     /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to bottom, #ED8F03, #FFB75E);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    grid-area: main2;
+    grid-area: 'light-content';
     grid-column: 1/2;
     grid-row: 3/4;
     border-radius: 10px;
@@ -247,7 +251,7 @@
   }
   #alert-content {
     background-color: yellow;
-    grid-area: main2;
+    grid-area: 'alert-content';
     grid-column: 2/3;
     grid-row: 3/4;
     border-radius: 10px;
@@ -255,7 +259,7 @@
   }
   #p {
     background-color: pink;
-    grid-area: main3;
+    grid-area: 'p';
     grid-column: 1/2;
     grid-row: 4/5;
     border-radius: 10px;
@@ -263,7 +267,7 @@
   }
   #control-content {
     background-color: orange;
-    grid-area: main3;
+    grid-area: 'control-content';
     grid-column: 2/3;
     grid-row: 4/5;
     border-radius: 10px;
