--- a/src/App.css
+++ b/src/App.css
@@ -78,8 +78,6 @@
 
 #topNav {
   grid-area: topNav;
-  grid-column: 1/3;
-  grid-row: 1;
   background-color: #61dafb97;
   /* overflow: hidden; */
 }
@@ -97,9 +95,7 @@
   background: #cb2d3e;
   background: linear-gradient(to bottom, #cb2d3e, #ef473a);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  grid-area: 'air-content';
-  grid-column: 1/2;
-  grid-row: 2/3;
+  grid-area: air-content;
   border-radius: 10px;
   color: #f5f7fa
 }
@@ -116,9 +112,7 @@
   /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #021B79, #0575E6);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  grid-area: 'water-content';
-  grid-column: 2/3;
-  grid-row: 2/3;
+  grid-area: water-content;
   border-radius: 10px;
   color: #f5f7fa
 }
@@ -132,36 +126,28 @@
   /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #ED8F03, #FFB75E);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  grid-area: 'light-content';
-  grid-column: 1/2;
-  grid-row: 3/4;
+  grid-area: light-content;
   border-radius: 10px;
   color: #f5f7fa
 }
 
 #alert-content {
-  background-color: yellow;
-  grid-area: 'alert-content';
-  grid-column: 2/3;
-  grid-row: 3/4;
+  background-color: gray;
+  grid-area: alert-content;
   border-radius: 10px;
   color: #f5f7fa
 }
 
 #p {
   background-color: pink;
-  grid-area: 'p';
-  grid-column: 1/2;
-  grid-row: 4/5;
+  grid-area: p;
   border-radius: 10px;
   color: #f5f7fa
 }
 
 #control-content {
   background-color: orange;
-  grid-area: 'control-content';
-  grid-column: 2/3;
-  grid-row: 4/5;
+  grid-area: control-content;
   border-radius: 10px;
   color: #f5f7fa
 }
@@ -172,7 +158,7 @@
 
 /* ------------------------------------------- */
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1024px) {
   * {
     margin: 0;
     padding: 0;
@@ -221,7 +207,7 @@
     background: #cb2d3e;
     background: linear-gradient(to bottom, #cb2d3e, #ef473a);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    grid-area: 'air-content';
+    grid-area: air-content;
     border-radius: 10px;
     color: #f5f7fa
   }
@@ -238,7 +224,7 @@
     /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to bottom, #021B79, #0575E6);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    grid-area: 'water-content';
+    grid-area: water-content;
     border-radius: 10px;
     color: #f5f7fa
   }
@@ -250,27 +236,35 @@
     /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to bottom, #ED8F03, #FFB75E);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    grid-area: 'light-content';
+    grid-area: light-content;
     border-radius: 10px;
     color: #f5f7fa
   }
   #alert-content {
     background-color: yellow;
-    grid-area: 'alert-content';
+    grid-area: alert-content;
     border-radius: 10px;
     color: #f5f7fa
   }
   #p {
     background-color: pink;
-    grid-area: 'p';
+    grid-area: p;
     border-radius: 10px;
     color: #f5f7fa
   }
   #control-content {
     background-color: orange;
-    grid-area: 'control-content';
+    grid-area: control-content;
     border-radius: 10px;
     color: #f5f7fa
+  }
+  #alert-box {
+    border: 3px solid black;
+    background-color: rgba(211, 211, 211, 0.65);
+    width: 75%;
+    height: 75%;
+    margin: 5% auto;
+    border-radius: 8px;
   }
   
   .label {
