--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   }
 
-  * {
+  /* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -66,16 +66,150 @@
     grid-area: air-content;
     border-radius: 2px;
     color: #f5f7fa
-  }
+  } */
 
   /* #humidty-img-box {
   padding-left: 50px;
 } */
 
-  #water-content {
+  /* #water-content {
     background: #1E3F6C;
     grid-area: water-content;
     border-radius: 10px;
+    color: #f5f7fa
+  }
+
+  #water-img-box {}
+
+  #light-content {
+    background: #FFB75E;
+    background: -webkit-linear-gradient(to bottom, #ED8F03, #FFB75E);
+    background: linear-gradient(to bottom, #ED8F03, #FFB75E);
+    grid-area: light-content;
+    border-radius: 2px;
+    color: #f5f7fa
+  } */
+
+  /* 
+  #alert-content {
+    background-color: yellow;
+    grid-area: alert-content;
+    border-radius: 2px;
+    color: #f5f7fa
+  }
+
+  #p {
+    background-color: pink;
+    grid-area: p;
+    border-radius: 2px;
+    color: #f5f7fa
+  } */
+
+  /* #control-content {
+    background-color: orange;
+    grid-area: control-content;
+    border-radius: 2px;
+    color: #f5f7fa
+  } */
+
+  /* ------------------------------------------- */
+
+  /* MOBILE / RESPONSIVE */
+
+  /* ------------------------------------------- */
+
+  /* @media screen and (max-width: 1000px) { */
+
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  #header {
+    background-color: #ffffff;
+    background-image: linear-gradient(550deg, #ffffff 0%, #82bc23 74%);
+    letter-spacing: 2px;
+    border-bottom: #282c34 1px solid;
+  }
+
+  #dash {
+    margin: 5%;
+    padding: 5%;
+    display: grid;
+    grid-template-columns: calc(50% - 15px) 50%;
+    grid-template-rows: 30vh 20vh 30vh;
+    grid-template-areas: "air-content   water-content" "light-content  alert-content" "   p        control-content";
+    grid-gap: 10px 15px;
+  }
+
+  /* #topNav {
+      grid-area: topNav;
+      background-color: #61dafb97;
+    }
+    #navItems {
+      width: 100%;
+      list-style: none;
+      display: flex;
+    }
+    #navItems li {
+      margin-right: 60px;
+      margin-top: 30px;
+    } */
+
+  /* ------------------------------------------- */
+
+  /* CONTENT BOXES */
+
+  /* ------------------------------------------- */
+
+  #air-content {
+    position: relative;
+    background: #FC5130;
+    grid-area: air-content;
+    border-radius: 2px;
+    color: #f5f7fa
+  }
+
+  #air-container {
+    position: absolute;
+    left: 50%;
+  }
+
+  #air-img-box>img {
+    position: relative;
+    left: -30%;
+    /* padding-left: 50px; */
+    /* margin-left: 5%; */
+    margin-top: 5%;
+  }
+
+  .info-text {
+    /* margin-right: 5%;
+      padding-top: 70%; */
+    font-weight: bold;
+    font-size: 2.9em;
+  }
+
+  .label1 {
+    font-size: 50%;
+    font-weight: 300;
+  }
+
+  .hum {
+    font-size: 2em;
+    padding-top: 10px;
+  }
+
+  .label2 {
+    font-size: 75%;
+    font-weight: 300;
+  }
+
+  #water-content {
+    background: #1E3F6C;
+    grid-area: water-content;
+    border-radius: 2px;
     color: #f5f7fa
   }
 
@@ -100,6 +234,15 @@
     color: #f5f7fa
   }
 
+  #alert-box {
+    border: 3px solid black;
+    background-color: rgba(211, 211, 211, 0.65);
+    width: 75%;
+    height: 75%;
+    margin: 5% auto;
+    border-radius: 8px;
+  }
+
   #p {
     background-color: pink;
     grid-area: p;
@@ -114,136 +257,11 @@
     color: #f5f7fa
   }
 
-  /* ------------------------------------------- */
-
-  /* MOBILE / RESPONSIVE */
-
-  /* ------------------------------------------- */
-
-  @media screen and (max-width: 1000px) {
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    #header {
-      background-color: #ffffff;
-      background-image: linear-gradient(550deg, #ffffff 0%, #82bc23 74%);
-      letter-spacing: 2px;
-      border-bottom: #282c34 1px solid;
-    }
-    #dash {
-      margin: 5%;
-      padding: 5%;
-      display: grid;
-      grid-template-columns: calc(50% - 15px) 50%;
-      grid-template-rows: 30vh 20vh 30vh;
-      grid-template-areas: "air-content   water-content" "light-content  alert-content" "   p        control-content";
-      grid-gap: 10px 15px;
-    }
-    /* #topNav {
-      grid-area: topNav;
-      background-color: #61dafb97;
-    }
-    #navItems {
-      width: 100%;
-      list-style: none;
-      display: flex;
-    }
-    #navItems li {
-      margin-right: 60px;
-      margin-top: 30px;
-    } */
-    /* ------------------------------------------- */
-    /* CONTENT BOXES */
-    /* ------------------------------------------- */
-    #air-content {
-      position: relative;
-      background: #FC5130;
-      grid-area: air-content;
-      border-radius: 2px;
-      color: #f5f7fa
-    }
-    #air-container {
-      position: relative;
-      bottom: -10%;
-    }
-    #air-img-box>img {
-      position: relative;
-      left: -30%;
-      /* padding-left: 50px; */
-      /* margin-left: 5%; */
-      margin-top: 5%;
-    }
-    .info-text {
-      position: relative;
-      /* margin-right: 5%;
-      padding-top: 70%; */
-      font-weight: bold;
-      font-size: 2.9em;
-      left: 20%;
-      bottom: 15%;
-    }
-    .label1 {
-      font-size: 50%;
-      font-weight: 300;
-    }
-    .hum {
-      font-size: 2em;
-      padding-top: 10px;
-    }
-    .label2 {
-      font-size: 75%;
-      font-weight: 300;
-    }
-    #water-content {
-      background: #1E3F6C;
-      grid-area: water-content;
-      border-radius: 2px;
-      color: #f5f7fa
-    }
-    #water-img-box {}
-    #light-content {
-      background: #FFB75E;
-      /* fallback for old browsers */
-      background: -webkit-linear-gradient(to bottom, #ED8F03, #FFB75E);
-      /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(to bottom, #ED8F03, #FFB75E);
-      /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-      grid-area: light-content;
-      border-radius: 2px;
-      color: #f5f7fa
-    }
-    #alert-content {
-      background-color: yellow;
-      grid-area: alert-content;
-      border-radius: 2px;
-      color: #f5f7fa
-    }
-    #alert-box {
-      border: 3px solid black;
-      background-color: rgba(211, 211, 211, 0.65);
-      width: 75%;
-      height: 75%;
-      margin: 5% auto;
-      border-radius: 8px;
-    }
-    #p {
-      background-color: pink;
-      grid-area: p;
-      border-radius: 2px;
-      color: #f5f7fa
-    }
-    #control-content {
-      background-color: orange;
-      grid-area: control-content;
-      border-radius: 2px;
-      color: #f5f7fa
-    }
-    .label {
-      margin-left: 5%;
-      margin-top: 5%;
-      font-size: 1.2rem;
-      align-self: start;
-    }
+  .label {
+    margin-left: 5%;
+    margin-top: 5%;
+    font-size: 1.2rem;
+    align-self: start;
   }
+
+  /* } */
